--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,132 +16,136 @@
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16"/>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400&display=swap"
+          rel="stylesheet">
 
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 
     <title>Contact Us | Rera QLH</title>
-  </head>
-  <body>
-  <header class="header-two">
+</head>
+<body>
+<header class="header-two">
     <div class="container" style="background-color: rgba(0,0,0,1);">
-      <div class="row">
-        <div class="col-lg-12">
-          <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">
-              <img src="assets/images/logo-light.png" alt="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+        <div class="row">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/images/logo-light.png" alt="logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="practicearea.html">Our Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="aboutus2.html">About Us</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-              </ul>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="practicearea.html">Our Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="aboutus2.html">About Us</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-          </nav>
         </div>
-      </div>
     </div>
-  </header>
+</header>
 
 
-  <section class="breadcrumb-two text-center">
+<section class="breadcrumb-two text-center">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1>Contact Us</h1>
-          <ul>
-            <li>
-              <a class="index.html">Home</a>
-            </li>
-            <li>/</li>
-            <li>Contact Us</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-    <!-- =============
-      Map
-    ============== -->
-    <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7002.720761901647!2d77.41074852293966!3d28.64892619501724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf1124161af57%3A0xd5a861534b4ba36c!2sTortoiz%20Themes!5e0!3m2!1sen!2sbd!4v1589526781472!5m2!1sen!2sbd" height="600" style="border:0;width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div>
-    <!-- =============
-      Map /
-    ============== -->
-
-    <!-- =============
-      Contact
-    ============== -->
-    <section>
-      <div class="container contact">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h6>Stay Update</h6>
-            <h2>Contact Us</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="row">
-              <div class="col-lg-6">
-                <input type="text" class="form-control" placeholder="Your Name" >
-                <input type="email" class="form-control" placeholder="Your Email" >
-                <input type="number" class="form-control" placeholder="Your Phone" >
-                <input type="text" class="form-control" placeholder="Subject" >
-              </div>
-              <div class="col-lg-6">
-                <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
-                <a href="#" class="btn btn-lg">Send Now</a>
-              </div>
+            <div class="col-lg-12">
+                <h1>Contact Us</h1>
+                <ul>
+                    <li>
+                        <a class="index.html">Home</a>
+                    </li>
+                    <li>/</li>
+                    <li>Contact Us</li>
+                </ul>
             </div>
-          </div>
-          <div class="col-lg-4 info">
-            <ul>
-              <li><i class="lni lni-phone"></i> +91 9958391877</li>
-              <li><i class="lni lni-phone-set"></i> +91 9958391877</li>
-              <li><i class="lni lni-envelope"></i> info@quicklegalhelp.com</li>
-              <li><i class="lni lni-map-marker"></i>Jaypee Kosmos, Sector 134, Noida-201304</li>
-            </ul>
-          </div>
         </div>
-      </div>
-    </section>
-    <!-- =============
-      Contact /
-    ============== -->
+    </div>
+</section>
 
-  <div id="iframeDiv">
+
+<!-- =============
+  Map
+============== -->
+<div class="map">
+
+    <iframe src="https://maps.google.com/maps?q=quicklegalhelp noida&t=&z=10&ie=UTF8&iwloc=&output=embed" height="600"
+            style="border:0;width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+</div>
+<!-- =============
+  Map /
+============== -->
+
+<!-- =============
+  Contact
+============== -->
+<section>
+    <div class="container contact">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h6>Stay Update</h6>
+                <h2>Contact Us</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <input type="text" class="form-control" placeholder="Your Name">
+                        <input type="email" class="form-control" placeholder="Your Email">
+                        <input type="number" class="form-control" placeholder="Your Phone">
+                        <input type="text" class="form-control" placeholder="Subject">
+                    </div>
+                    <div class="col-lg-6">
+                        <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                        <a href="#" class="btn btn-lg">Send Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 info">
+                <ul>
+                    <li><i class="lni lni-phone"></i> +91 9958391877</li>
+                    <li><i class="lni lni-phone-set"></i> +91 9958391877</li>
+                    <li><i class="lni lni-envelope"></i> info@quicklegalhelp.com</li>
+                    <li><i class="lni lni-map-marker"></i>Jaypee Kosmos, Sector 134, Noida-201304</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- =============
+  Contact /
+============== -->
+
+<div id="iframeDiv">
     <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
-  </div>
+</div>
 
-    <!-- JS -->
+<!-- JS -->
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.bundle.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/owl-carousel/owl.carousel.min.js"></script>
-  <script src="assets/js/wow.min.js"></script>
-  </body>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.bundle.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/owl-carousel/owl.carousel.min.js"></script>
+<script src="assets/js/wow.min.js"></script>
+</body>
 </html>
