--- a/advice_white.html
+++ b/advice_white.html
@@ -21,8 +21,8 @@
         <div class="row">
             <div class="col-lg-7 mx-auto text-center">
                 <img src="assets/images/logo.png" alt="logo">
-                <h6 class="my-3">10+ YEARS OF EXPERIENCE</h6>
-                <h1>Need An Advice From Expert</h1>
+                <h6 class="my-3">Free Legal Advice Online from Top Rated Lawyers. CALL NOW.</h6>
+                <h1>Talk To A Lawyer Now</h1>
                 <h2>+91 9958391877</h2>
             </div>
         </div>
