--- a/index.html
+++ b/index.html
@@ -131,9 +131,8 @@
                 <div class="services">
                     <img src="assets/images/practice-2.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Fraud</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
+                        <h3>File RERA Cases</h3>
+                        <p>For Possession, Refund of Deposit, Non-Compliance, Non-Payment of EMI/Pre-EMI, etc</p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -142,9 +141,8 @@
                 <div class="services">
                     <img src="assets/images/practice-3.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Driving Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
+                        <h3>Project Registration</h3>
+                        <p>Real Estate Project Registration, Extension, Compliance's, etc</p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -153,20 +151,10 @@
                 <div class="services">
                     <img src="assets/images/practice-4.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Drug Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-5.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>Personal Injury</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
+                        <h3>Agent/Broker Registration</h3>
+                        <p>Real Estate Agent/Broker/Company Registration, Partnership/Proprietorship Firm Registration,
+                            etc
+                        </p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -175,9 +163,8 @@
                 <div class="services">
                     <img src="assets/images/practice-6.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Gun Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
+                        <h3>Cheque Bounce</h3>
+                        <p>Cheque Bounce Cases</p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -186,9 +173,20 @@
                 <div class="services">
                     <img src="assets/images/practice-7.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Juvenile Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity
-                            theft.</p>
+                        <h3>Consumer Forum Matters</h3>
+                        <p>File cases in District/State/Nation Consumer Forums, etc</p>
+                        <a href="#" class="glb-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 my-3">
+                <div class="services">
+                    <img src="assets/images/practice-5.jpg" alt="practice" class="img-fluid">
+                    <div class="content">
+                        <h3>Other Services</h3>
+                        <p>Project Quarterly Compliance, Change of Project Bank Account, Legal Notice, Settlement
+                            Agreement
+                        </p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -233,6 +231,9 @@
             }
         }
     });
+
+
+
 
 </script>
 </body>
