--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <img src="assets/images/practice-3.jpg" alt="practice" class="img-fluid">
                     <div class="content">
                         <h3>Project Registration</h3>
-                        <p>Real Estate Project Registration, Extension, Compliance's, etc</p>
+                        <p>Real Estate Project Registration, Project Extension and Project Compliance's</p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
                 </div>
@@ -151,9 +151,8 @@
                 <div class="services">
                     <img src="assets/images/practice-4.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Agent/Broker Registration</h3>
-                        <p>Real Estate Agent/Broker/Company Registration, Partnership/Proprietorship Firm Registration,
-                            etc
+                        <h3>Agent Registration</h3>
+                        <p>Real Estate Agent/Broker/Company Registration, Partnership or Proprietorship Firm Registration
                         </p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
@@ -173,7 +172,7 @@
                 <div class="services">
                     <img src="assets/images/practice-7.jpg" alt="practice" class="img-fluid">
                     <div class="content">
-                        <h3>Consumer Forum Matters</h3>
+                        <h3>ConsumerForum Matter</h3>
                         <p>File cases in District/State/Nation Consumer Forums, etc</p>
                         <a href="#" class="glb-btn">Read More</a>
                     </div>
