--- a/index.html
+++ b/index.html
@@ -113,88 +113,9 @@
 </section>
 <!-- About Us End -->
 
-<!-- Service Start -->
-<section class="section service-two">
-    <div class="container">
-        <div class="row mb-lg-4 mb-md-4 mb-sm-4 mb-3 align-items-center">
-            <div class="col-lg-4">
-                <h2>What can we help you with</h2>
-            </div>
-            <div class="col-lg-6 ml-auto">
-                <p class="ml-3">We provide excellent answers to assist you in overcoming any obstacle in your real
-                    estate endeavour as one of the respected legal service providers for RERA services in the
-                    nation.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-2.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>File RERA Cases</h3>
-                        <p>For Possession, Refund of Deposit, Non-Compliance, Non-Payment of EMI/Pre-EMI, etc</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-3.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>Project Registration</h3>
-                        <p>Real Estate Project Registration, Project Extension and Project Compliance's</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-4.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>Agent Registration</h3>
-                        <p>Real Estate Agent/Broker/Company Registration, Partnership or Proprietorship Firm Registration
-                        </p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-6.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>Cheque Bounce</h3>
-                        <p>Cheque Bounce Cases</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-7.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>ConsumerForum Matter</h3>
-                        <p>File cases in District/State/Nation Consumer Forums, etc</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-5.jpg" alt="practice" class="img-fluid">
-                    <div class="content">
-                        <h3>Other Services</h3>
-                        <p>Project Quarterly Compliance, Change of Project Bank Account, Legal Notice, Settlement
-                            Agreement
-                        </p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Service End -->
+
 <div id="iframeDiv">
+    <iframe width="100%" height="1200" src="services.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
 </div>
