--- a/practicearea.html
+++ b/practicearea.html
@@ -72,82 +72,8 @@
 </section>
 
 
-<section class="section service-two">
-    <div class="container">
-        <div class="row mb-lg-4 mb-md-4 mb-sm-4 mb-3 align-items-center">
-            <div class="col-lg-4">
-                <h2>What can we help you with</h2>
-            </div>
-            <div class="col-lg-6 ml-auto">
-                <p class="ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis .</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-2.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Fraud</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-3.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Driving Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-4.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Drug Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-5.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Personal Injury</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-6.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Gun Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="services">
-                    <img src="assets/images/practice-7.jpg" alt="practice" class="img-fluid" />
-                    <div class="content">
-                        <h3>Juvenile Crimes</h3>
-                        <p>Forgery, auto insurance fraud, check fraud, credit card fraud, health care fraud, identity theft.</p>
-                        <a href="#" class="glb-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 <div id="iframeDiv">
+    <iframe width="100%" height="1200" src="services.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
 </div>
