--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 <!doctype html>
 <html lang="en">
-<head>
+<script>
+function includeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain attribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+
+</script><head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,6 +46,7 @@
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
     <title>QUICK LEGAL HELP</title>
 </head>
+
 <body>
 <!-- Header Start-->
 <header class="header-two">
@@ -113,9 +143,10 @@
 </section>
 <!-- About Us End -->
 
+<div w3-include-html="services.html"></div>
 
 <div id="iframeDiv">
-    <iframe width="100%" height="1200" src="services.html" style="border:none;overflow: hidden;"></iframe>
+
     <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
     <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
 </div>
@@ -154,6 +185,11 @@
 
 
 
+
+
+</script>
+<script>
+includeHTML();
 
 </script>
 </body>
