--- a/index.html
+++ b/index.html
@@ -144,12 +144,9 @@ function includeHTML() {
 <!-- About Us End -->
 
 <div w3-include-html="services.html"></div>
+<div w3-include-html="advice_white.html"></div>
+<div w3-include-html="footer.html"></div>
 
-<div id="iframeDiv">
-
-    <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
-    <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
-</div>
 <!-- JS -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
