--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,36 @@
 <!doctype html>
 <html lang="en">
+<script>
+function includeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain attribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+
+
+</script>
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -134,10 +165,9 @@
   Contact /
 ============== -->
 
-<div id="iframeDiv">
-    <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
-    <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
-</div>
+<div w3-include-html="advice_white.html"></div>
+<div w3-include-html="footer.html"></div>
+
 
 <!-- JS -->
 
@@ -147,5 +177,9 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/owl-carousel/owl.carousel.min.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script>
+includeHTML();
+
+</script>
 </body>
 </html>
