--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ function includeHTML() {
   }
 };
 
-</script><head>
+
+</script>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -184,9 +186,11 @@ function includeHTML() {
 
 
 
+
 </script>
 <script>
 includeHTML();
+
 
 </script>
 </body>
