--- a/aboutus2.html
+++ b/aboutus2.html
@@ -30,6 +30,7 @@ function includeHTML() {
 };
 
 
+
 </script>
 <head>
 
@@ -111,13 +112,19 @@ function includeHTML() {
             <div class="col-lg-6 pl-lg-5">
                 <h2>About Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus
-                    ante viverra nec. Vivamus luctus, ipsum eget ornare convallis, urna justo rutrum diam, eget tempus
-                    lorem ipsum a magna. consectetur adipiscing elit. Integer
-                    semper metus mi, sit amet cursus ante viverra nec.
+                    Quick Legal Help (QLH)is a full-Legal Service Platform, providing an extensive range of legal
+                    services on various law related issues. Our Offices are providing best and expert legal services to
+                    its Domestic as well as International Clients. QLH is the one from which you can seek holistic legal
+                    assistance on both civil and criminal matters. The amount of legal services that it is providing to
+                    its clients makes it one of the top firms in Delhi NCR. Today it has become the beacon of trust and
+                    transparency. Hence, if you are thinking you need effective and concrete legal solutions to your
+                    problems, connect with the QLH.
                 </p>
-                <p>Vivamus tempor sit amet ex ac sodales. In sit amet volutpat velit. Ut faucibus elit sed velit
-                    imperdiet, ac varius mauris faucibus.</p>
+                <p> Our best Rera attorney in Delhi NCR are committed to assisting our clients in remaining in front of
+                    regulatory changes across several states and in compliance. Leading real estate companies regularly
+                    use our well regarded multidisciplinary groups with deep expertise for qualitative, monetary,
+                    advertising, legal, administrative assistance, and many other services.
+                </p>
                 <div class="d-flex flex-row justify-content-center counter mt-5">
                     <div class="col-4">
                         <h1>12+</h1>
@@ -138,6 +145,7 @@ function includeHTML() {
 </section>
 
 
+<!--
 <section class="section about-us-two bg-light">
     <div class="container">
         <div class="row align-items-center">
@@ -163,6 +171,7 @@ function includeHTML() {
         </div>
     </div>
 </section>
+-->
 
 <div w3-include-html="advice_white.html"></div>
 <div w3-include-html="footer.html"></div>
@@ -201,9 +210,11 @@ function includeHTML() {
     });
 
 
+
 </script>
 <script>
 includeHTML();
+
 
 </script>
 </body>
