--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function includeHTML() {
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-7 pr-lg-5">
-                <h1>WELCOME TO </br><span>Rera QLH</span></h1>
+                <h2 style="color: red;">WELCOME TO RERA </br><span> Quick Legal Help</span></h2>
                 <p>We are serving as Legal Service Platform Since 2018, having expertise in real estate law (RERA) and
                     specialize in property disputes between builders and buyers.</p>
                 <a href="practicearea.html" class="btn">Lets Explore</a>
