--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@ function includeHTML() {
     <div class="container contact">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h6>Stay Update</h6>
+                <h6>Free Legal Advice</h6>
                 <h2>Contact Us</h2>
             </div>
         </div>
@@ -142,10 +142,9 @@ function includeHTML() {
                         <input type="text" class="form-control" placeholder="Your Name">
                         <input type="email" class="form-control" placeholder="Your Email">
                         <input type="number" class="form-control" placeholder="Your Phone">
-                        <input type="text" class="form-control" placeholder="Subject">
                     </div>
                     <div class="col-lg-6">
-                        <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                        <textarea class="form-control" rows="5" placeholder="Your Query"></textarea>
                         <a href="#" class="btn btn-lg">Send Now</a>
                     </div>
                 </div>
