--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 my-3">
                 <div class="services">
-                    <img src="assets/images/practice-7.jpg" alt="practice" class="img-fluid">
+                    <img src="assets/images/practice-3.jpeg" alt="practice" class="img-fluid">
                     <div class="content">
                         <h3>Consumer Forum Matter</h3>
                         <p>File cases in District/State/Nation Consumer Forums, etc</p>
